# swim-rust

./: .gitignore  .gitmodules  .tarpaulin.toml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  azure-pipelines.yml  build_rs_cov.profraw  cargo-timing.html  cert.pem  certificate.cert  cobertura.xml  codecov.yml  install-commit-hook.sh  pre-commit  remove-commit-hook.sh
api/swim_api/: Cargo.toml
client/: Cargo.toml  README.md
client/examples/: rolling_average.rs  rolling_mean.rs
client/fixture/: Cargo.toml
client/macros/: Cargo.toml
client/runtime/: Cargo.toml
client/src/: lib.rs
client/swim_client/: Cargo.toml
client/swimos_client/: Cargo.toml
client/test_server/: Cargo.toml  build.rs
client/tests/: client.rs  d.rs  interface.rs  router.rs
client_main/: Cargo.toml  log.txt
client_main/src/: main.rs
common/: Cargo.toml
common/form_derive/: Cargo.toml
common/src/: lib.rs
cookbook/: Cargo.toml  README.md
cookbook/command_lanes/: Cargo.toml  README.md
cookbook/downlinks/: Cargo.toml  README.md
cookbook/join_map_lanes/: Cargo.toml  README.md
cookbook/join_value_lanes/: Cargo.toml  README.md
cookbook/map_lanes/: Cargo.toml  README.md
cookbook/timers/: Cargo.toml  README.md
cookbook/value_lanes/: Cargo.toml  README.md
cookbook/web_agents/: Cargo.toml  README.md
form/: Cargo.toml
form/deserialize/: Cargo.toml
form/form_derive/: Cargo.toml
form/serialize/: Cargo.toml
form/src/: collections.rs  impls.rs  lib.rs  primitives.rs
macro_utilities/: Cargo.toml
macro_utilities/src/: form.rs  generics.rs  label.rs  lib.rs  utilities.rs
macro_utilities/stringify_attr/: Cargo.toml
ratchet/: .gitignore  Cargo.toml  README.md
ratchet/autobahn/: client-results.json  fuzzingclient.json  fuzzingserver.json  server-results.json
ratchet/examples/: autobahn-client.rs  autobahn-server.rs  cl.rs  client.rs  serv.rs  server.rs
ratchet/ratchet_core/: Cargo.toml  README.md
ratchet/ratchet_deflate/: Cargo.toml  README.md
ratchet/ratchet_ext/: Cargo.toml  LICENSE  README.md
ratchet/ratchet_fixture/: Cargo.toml
ratchet/ratchet_proto/: Cargo.toml
ratchet/src/: builder.rs  codec.rs  error.rs  errors.rs  f2.rs  http_ext.rs  lib.rs  split.rs  ws.rs
server/: Cargo.toml  README.md
server-freezing-example/: Cargo.toml
server-freezing-example/src/: first_client.rs  second_client.rs  server.rs  unit_agent.rs
server/src/: lib.rs
server/swim_agent/: Cargo.toml
server/swim_agent_derive/: Cargo.toml
server/swim_http/: Cargo.toml
server/swim_introspection/: Cargo.toml
server/swim_server_app/: Cargo.toml
server/swimos_agent/: Cargo.toml
server/swimos_agent_derive/: Cargo.toml
server/swimos_connector/: Cargo.toml
server/swimos_connector_fluvio/: Cargo.toml
server/swimos_connector_kafka/: Cargo.toml
server/swimos_connector_mqqt/: Cargo.toml
server/swimos_connector_mqtt/: Cargo.toml
server/swimos_connector_util/: Cargo.toml
server/swimos_introspection/: Cargo.toml
server/swimos_server_app/: Cargo.toml
stm/: Cargo.toml
stm/benches/: stm_throughput.rs
stm/src/: lib.rs
swim/: Cargo.toml
swim/examples/: agentimpl.rs
swim/src/: agent.rs  lib.rs
swim/tests/: agentlifecycle.rs  deriveagentlanemodel.rs  moo.rs  projectionsmacro.rs
swim_client/: Cargo.toml
swim_client/examples/: downlinks.rs  join_map_lanes.rs  join_value_lanes.rs  value_lanes.rs
swim_client/src/: lib.rs
swim_client/test_server/: Cargo.toml  build.rs
swim_client/tests/: interface.rs  router.rs
swim_common/: Cargo.toml
swim_common/form_derive/: Cargo.toml
swim_common/src/: lib.rs
swim_common/tests/: deriveform.rs  derivereadable.rs  derivestruct.rs  derivetag.rs  derivewritable.rs
swim_downlink/: Cargo.toml
swim_downlink/src/: lib.rs
swim_form/: Cargo.toml  README.md
swim_form/derive_validated/: Cargo.toml
swim_form/deserialize/: Cargo.toml
swim_form/form_derive/: Cargo.toml
swim_form/serialize/: Cargo.toml
swim_form/src/: bigint.rs  form_impls.rs  impls.rs  lib.rs  primitives.rs
swim_form_new/: Cargo.toml
swim_form_new/form_derive_new/: Cargo.toml
swim_form_new/src/: form_impls.rs  lib.rs  transmute_impls.rs
swim_form_old/: Cargo.toml
swim_form_old/form_derive_old/: Cargo.toml
swim_form_old/src/: lib.rs
swim_runtime/: Cargo.toml
swim_runtime/src/: lib.rs  task.rs  time.rs
swim_server/: Cargo.toml
swim_server/agent_derive/: Cargo.toml
swim_server/auth/: Cargo.toml
swim_server/db/: Cargo.toml
swim_server/lifecycle_derive/: Cargo.toml
swim_server/server_store/: Cargo.toml
swim_server/src/: lib.rs  macros.rs  scheduler.rs
swim_server/store/: Cargo.toml
swim_server/swim_metrics/: Cargo.toml
swim_utilities/: Cargo.toml
swim_utilities/byte_channel/: Cargo.toml
swim_utilities/multi_reader/: Cargo.toml
swim_utilities/src/: lib.rs  never.rs
swim_utilities/swim_algebra/: Cargo.toml
swim_utilities/swim_bilock/: Cargo.toml
swim_utilities/swim_errors/: Cargo.toml
swim_utilities/swim_format/: Cargo.toml
swim_utilities/swim_future/: Cargo.toml
swim_utilities/swim_io/: Cargo.toml
swim_utilities/swim_iteratee/: Cargo.toml
swim_utilities/swim_lrucache/: Cargo.toml
swim_utilities/swim_multi_reader/: Cargo.toml
swim_utilities/swim_num/: Cargo.toml
swim_utilities/swim_route/: Cargo.toml
swim_utilities/swim_rtree/: Cargo.toml
swim_utilities/swim_sync/: Cargo.toml
swim_utilities/swim_sync_bilock/: Cargo.toml
swim_utilities/swim_test_util/: Cargo.toml
swim_utilities/swim_time/: Cargo.toml
swim_utilities/swim_tracing/: Cargo.toml
swim_utilities/swim_trigger/: Cargo.toml
swim_utilities/swim_uri_forest/: Cargo.toml
swim_warp/: Cargo.toml
swim_warp/src/: lib.rs  map.rs
swim_wasm/: Cargo.toml  tree.txt
swim_wasm/src/: connection.rs  lib.rs
swimos/: Cargo.toml
swimos/examples/: agentimpl.rs
swimos/src/: agent.rs  lib.rs
swimos/tests/: agentlifecycle.rs  (+3 more)
swimos_client/: Cargo.toml
swimos_downlink/: Cargo.toml
swimos_macro_utilities/: Cargo.toml
swimos_utilities/: Cargo.toml
utilities/: Cargo.toml
(+4416 files in other folders)
