[workspace]
resolver = "2"
members = [
    "client/*",
    "swim",
    "api/swim_*",
    "api/formats/swim_*",
    "macro_utilities",
    "runtime/swim_*",
    "swim_store",
    "swim_utilities",
    "swim_utilities/swim_*",
    "swim_downlink",
    "server/swim_*",
    "example_apps/example_util",
    "example_apps/basic",
    "example_apps/console",
    "example_apps/console/console_views",
    "example_apps/multi/server",
    "example_apps/multi/client",
    "example_apps/value_lane",
    "example_apps/map_lane",
    "example_apps/command_lane",
    "example_apps/value_store",
    "example_apps/map_store",
    "example_apps/value_lane_persistence",
    "example_apps/map_lane_persistence",
    "example_apps/value_store_persistence",
    "example_apps/map_store_persistence",
]

exclude = [
    "cookbook"
]

[profile.release]
opt-level = 3

[profile.ci]
inherits = 'dev'

[profile.ci.package.librocksdb-sys]
debug = false
opt-level = "z"

[workspace.dependencies]
bytes = "1.3"
tokio = "1.22"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
futures = "0.3.25"
futures-util = "0.3.25"
parking_lot = "0.12"
pin-project = "1.0.12"
rand = "0.8"
criterion = "0.4"
either = "1.8"
tempdir = "0.3.7"
slab = "0.4"
smallvec = "1.10"
uuid = "1.2"
http = "0.2"
nom = "7.1"
nom_locate = "4.0"
tracing = "0.1"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2"
base64 = "0.13"
num-traits = "0.2"
thiserror = "1.0"
static_assertions = "1.1.0"
url = "2.1.1"
chrono = "0.4"
trybuild = "1.0.65"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0.3"
num-bigint = "0.4"
ratchet =  { package = "ratchet_rs", version = "0.2.0" }
ratchet_fixture = "0.2.0"
flate2 = "1.0.22"
bitflags = "1.3"
rocksdb = "0.19.0"
integer-encoding = "3.0.4"
rustls = "0.20"
webpki = "0.22"
webpki-roots = "0.22"
tokio-rustls = "0.23"
rustls-pemfile = "1.0.0"
trust-dns-resolver = "0.22.0"
clap = "4.1"
crossbeam-queue = { version = "0.3" }
crossbeam-channel = { version = "0.5" }
