[workspace]
resolver = "2"
members = [
    "client/*",
    "swimos",
    "api/swimos_*",
    "api/formats/swimos_*",
    "macro_utilities",
    "runtime/swimos_*",
    "swimos_utilities",
    "swimos_utilities/swimos_*",
    "swimos_downlink",
    "server/swimos_*",
    "example_apps/example_util",
    "example_apps/console",
    "example_apps/console/console_views",
    "example_apps/demand_lane",
    "example_apps/demand_map_lane",
    "example_apps/value_lane",
    "example_apps/map_lane",
    "example_apps/command_lane",
    "example_apps/value_store",
    "example_apps/map_store",
    "example_apps/supply_lane",
    "example_apps/value_lane_persistence",
    "example_apps/map_lane_persistence",
    "example_apps/value_store_persistence",
    "example_apps/map_store_persistence",
    "example_apps/event_downlink",
    "example_apps/value_downlink",
    "example_apps/map_downlink",
    "example_apps/local_downlink",
    "example_apps/http_lane",
    "example_apps/transit",
    "example_apps/transit/transit-model",
    "example_apps/tutorial_app",
    "example_apps/tutorial_app/model",
    "example_apps/tutorial_app/generator",
    "example_apps/join_map",
    "example_apps/join_value",
    "example_apps/aggregations",
]

exclude = [
    "cookbook"
]

[profile.release]
opt-level = 3

[profile.ci]
inherits = 'dev'

[profile.ci.package.librocksdb-sys]
debug = false
opt-level = "z"

[workspace.dependencies]
bytes = "1.3"
tokio = "1.22"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
futures = "0.3.25"
futures-util = "0.3.25"
parking_lot = "0.12"
pin-project = "1.0.12"
rand = "0.8"
criterion = "0.5.1"
either = "1.8"
tempdir = "0.3.7"
slab = "0.4"
smallvec = "1.10"
uuid = "1.2"
http = "0.2"
nom = "7.1"
nom_locate = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
base64 = "0.22"
num-traits = "0.2"
thiserror = "1.0"
static_assertions = "1.1.0"
url = "2.1.1"
chrono = "0.4.31"
trybuild = "1.0.65"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0.3"
num-bigint = "0.4"
ratchet = { package = "ratchet_rs", version = "0.4" }
ratchet_fixture = "0.4"
flate2 = "1.0.22"
bitflags = "2.5"
rocksdb = "0.22"
integer-encoding = "4.0.0"
rustls = "0.20"
webpki = "0.22"
webpki-roots = "0.22"
tokio-rustls = "0.23"
rustls-pemfile = "1.0.0"
trust-dns-resolver = "0.23.2"
clap = "4.1"
crossbeam-queue = { version = "0.3" }
crossbeam-channel = { version = "0.5" }
hyper = "0.14"
percent-encoding = "2.1.0"
mime = "0.3"
serde_json = "1.0"
serde = "1.0"
reqwest = "0.12.4"
convert_case = "0.6"
frunk = "0.4"
byteorder = "1.4"
rmp = "0.8"
ryu = "1.0"
regex = "1.3.6"
fnv = "1.0.7"
cursive = { default-features = false, version = "0.20" }
duration-str = "0.11.2"
quick-xml = "0.31.0"
csv = "1.2"
serde-xml-rs = "0.6"
axum = "0.6.20"
hyper-staticfile = "0.9"
httparse = "1.8"
sha-1 = "0.10.1"
waker-fn = "1.1.0"
num = "0.4"
smol_str = "0.2.0"
