[workspace]
resolver = "2"
members = [
    "swimos_client",
    "swimos",
    "api/swimos_*",
    "api/formats/swimos_*",
    "swimos_macro_utilities",
    "runtime/swimos_*",
    "swimos_utilities",
    "swimos_utilities/swimos_*",
    "swimos_downlink",
    "server/swimos_*",
    "example_apps/example_util",
    "example_apps/console",
    "example_apps/console/console_views",
    "example_apps/demand_lane",
    "example_apps/demand_map_lane",
    "example_apps/value_lane",
    "example_apps/map_lane",
    "example_apps/command_lane",
    "example_apps/value_store",
    "example_apps/map_store",
    "example_apps/supply_lane",
    "example_apps/value_lane_persistence",
    "example_apps/map_lane_persistence",
    "example_apps/value_store_persistence",
    "example_apps/map_store_persistence",
    "example_apps/event_downlink",
    "example_apps/value_downlink",
    "example_apps/map_downlink",
    "example_apps/local_downlink",
    "example_apps/http_lane",
    "example_apps/transit",
    "example_apps/transit/transit-model",
    "example_apps/tutorial_app",
    "example_apps/tutorial_app/model",
    "example_apps/tutorial_app/generator",
    "example_apps/join_map",
    "example_apps/join_value",
    "example_apps/aggregations",
    "example_apps/time_series",
    "example_apps/devguide",
    "example_apps/ripple",
    "example_apps/stocks_simulated",
]

[workspace.package]
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/swimos/swim-rust/"

[profile.release]
opt-level = 3

[profile.ci]
inherits = 'dev'

[profile.ci.package.librocksdb-sys]
debug = false
opt-level = "z"

[workspace.dependencies]
swimos_msgpack = { path = "api/formats/swimos_msgpack", version = "0.1.0" }
swimos_recon = { path = "api/formats/swimos_recon", version = "0.1.0" }
swimos_agent_protocol = { path = "api/swimos_agent_protocol", version = "0.1.0" }
swimos_api = { path = "api/swimos_api", version = "0.1.0" }
swimos_client_api = { path = "api/swimos_client_api", version = "0.1.0" }
swimos_form = { path = "api/swimos_form", version = "0.1.0" }
swimos_form_derive = { path = "api/swimos_form_derive", version = "0.1.0" }
swimos_meta = { path = "api/swimos_meta", version = "0.1.0" }
swimos_model = { path = "api/swimos_model", version = "0.1.0" }
swimos_http = { path = "runtime/swimos_http", version = "0.1.0" }
swimos_messages = { path = "runtime/swimos_messages", version = "0.1.0" }
swimos_remote = { path = "runtime/swimos_remote", version = "0.1.0" }
swimos_rocks_store = { path = "runtime/swimos_rocks_store", version = "0.1.0" }
swimos_runtime = { path = "runtime/swimos_runtime", version = "0.1.0" }
swimos_agent = { path = "server/swimos_agent", version = "0.1.0" }
swimos_agent_derive = { path = "server/swimos_agent_derive", version = "0.1.0" }
swimos_introspection = { path = "server/swimos_introspection", version = "0.1.0" }
swimos_server_app = { path = "server/swimos_server_app", version = "0.1.0" }
swimos = { path = "swimos", version = "0.1.0" }
swimos_client = { path = "swimos_client", version = "0.1.0" }
swimos_downlink = { path = "swimos_downlink", version = "0.1.0" }
swimos_macro_utilities = { path = "swimos_macro_utilities", version = "0.1.0" }
swimos_utilities = { path = "swimos_utilities", version = "0.1.0" }
swimos_byte_channel = { path = "swimos_utilities/swimos_byte_channel" }
swimos_multi_reader = { path = "swimos_utilities/swimos_multi_reader" }
swimos_algebra = { path = "swimos_utilities/swimos_algebra" }
swimos_num = { path = "swimos_utilities/swimos_num" }
swimos_errors = { path = "swimos_utilities/swimos_errors" }
swimos_format = { path = "swimos_utilities/swimos_format" }
swimos_trigger = { path = "swimos_utilities/swimos_trigger" }
swimos_future = { path = "swimos_utilities/swimos_future" }
swimos_fs = { path = "swimos_utilities/swimos_fs" }
swimos_route = { path = "swimos_utilities/swimos_route" }
swimos_rtree = { path = "swimos_utilities/swimos_rtree" }
swimos_sync = { path = "swimos_utilities/swimos_sync" }
swimos_time = { path = "swimos_utilities/swimos_time" }
swimos_encoding = { path = "swimos_utilities/swimos_encoding" }

bytes = "1.3"
tokio = "1.22"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
futures = "0.3.25"
futures-util = "0.3.25"
parking_lot = "0.12"
pin-project = "1.0.12"
rand = "0.8"
criterion = "0.5.1"
either = "1.8"
tempdir = "0.3.7"
slab = "0.4"
smallvec = "1.10"
uuid = "1.2"
http = "1.1.0"
nom = "7.1"
nom_locate = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
base64 = "0.22"
num-traits = "0.2"
thiserror = "1.0"
static_assertions = "1.1.0"
url = "2.1.1"
chrono = "0.4.31"
trybuild = "1.0.65"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0.3"
num-bigint = "0.4"
ratchet = { package = "ratchet_rs", version = "1.0" }
ratchet_core = { version = "1.0" }
ratchet_fixture = { version = "1.0" }
flate2 = "1.0.22"
bitflags = "2.5"
rocksdb = "0.22"
integer-encoding = "4.0.0"
rustls = "0.23.10"
webpki = "0.22"
webpki-roots = "0.26.3"
tokio-rustls = "0.26"
rustls-pemfile = "2.1.2"
hickory-resolver = "0.24.1"
clap = "4.1"
crossbeam-queue = { version = "0.3" }
crossbeam-channel = { version = "0.5" }
hyper = "1.3.1"
percent-encoding = "2.1.0"
mime = "0.3"
serde_json = "1.0"
serde = "1.0"
reqwest = "0.12.4"
convert_case = "0.6"
frunk = "0.4"
byteorder = "1.4"
rmp = "0.8"
ryu = "1.0"
regex = "1.3.6"
fnv = "1.0.7"
cursive = { default-features = false, version = "0.20" }
duration-str = "0.11.2"
quick-xml = "0.36.0"
csv = "1.2"
serde-xml-rs = "0.6"
axum = "0.7.5"
hyper-staticfile = "0.10.0"
httparse = "1.8"
sha-1 = "0.10.1"
waker-fn = "1.1.0"
num = "0.4"
smol_str = "0.2.0"
http-body-util = "0.1.2"
hyper-util = "0.1.5"