[package]
name = "client"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4.8"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2", features = ["sync", "stream", "rt-threaded", "macros", "time"] }
tokio-tls = "0.3.0"
im = "14.2.0"
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
url = "2.1.1"
rand = "0.7.3"
tracing = { version = "0.1.13"}
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"

common = { path = "../common" }
utilities = { path = "../utilities" }
form = { path = "../form" }
deserialize = { path = "../form/deserialize"}

[dev-dependencies]
hamcrest2 = "0.3"
assert_matches = "1.3.0"
test_server = { path = "test_server" }
pretty_env_logger = "0.3"
