[package]
name = "client"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
default = ["tokio-tungstenite", "tokio-tls"]
wasm = []
debug = ["log_verbose"]
log_verbose = []
test-server = ["test_server"]

[dependencies.test_server]
path = "test_server"
features = ["enabled"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "0.2.21", features = ["sync", "stream", "macros", "time"] }
web-sys = { version = "0.3.39", features = ["WebSocket", "ErrorEvent"] }
wasm-bindgen-futures = "0.4.13"
ws_stream_wasm = "0.6.0"
wasm-bindgen = "0.2.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.2.21", features = ["sync", "stream", "rt-core", "macros", "time"] }

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.13"

[dependencies]
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4.8"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
im = "14.2.0"
url = "2.1.1"
rand = "0.7.3"
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"
common = { path = "../common" }
utilities = { path = "../utilities" }
swim_form = { path = "../swim_form" }
tokio-tls = { version = "=0.3.1", optional = true }
tokio-tungstenite = { version = "0.10.1", features = ["tls"], optional = true }

[dev-dependencies]
hamcrest2 = "0.3"
tokio = { version = "0.2.21", features = ["rt-threaded"] }
clap = "2.33.1"

[[example]]
name = "rolling_average"
