[package]
name = "common"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
pin-utils = "0.1.0-alpha.4"
bytes = "0.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
pin-project = "0.4.8"
tokio = { version = "0.2", features = ["sync"] }
tokio-util = { version = "0.2", features = ["codec"] }
either = "1.5.3"
utilities = { path = "../utilities" }

[dev-dependencies]
hamcrest2 = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
