[package]
name = "common"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
swim_runtime = { path = "../swim_runtime" }
pin-utils = "0.1.0-alpha.4"
bytes = "0.5.3"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
pin-project = "0.4.20"
tokio = { version = "0.2.21", features = ["sync", "rt-core"] }
regex = "1.3.6"
tokio-util = { version = "0.3.1", features = ["codec"] }
utilities = { path = "../utilities" }
url = "2.1.1"
tracing = { version = "0.1.13"}
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"
num-bigint = { version = "0.3", features = ["serde"] }
num-traits = "0.2.12"

[dev-dependencies]
hamcrest2 = "0.3"
tokio = { version = "0.2.21", features = ["fs", "macros"] }
rand = "0.7"
num-bigint = { version = "0.3", features = ["rand"] }