[package]
name = "cookbook"
version = "0.1.0"
authors = ["DobromirM <mr.d.marinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
tokio = "0.2.21"
swim_client = { path = "../swim_client" }
swim_common = { path = "../swim_common" }