[package]
name = "cookbook"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
tokio = "1.1.1"
futures = "0.3.4"
futures-util = "0.3.4"
rand = "0.7.3"
async-std = "1.7.0"
tracing = "0.1.16"
tracing-futures = "0.2.4"
swim_client = { path = "../swim_client" }
swim_common = { path = "../swim_common" }
swim_server = { path = "../swim_server" }
stm = { path = "../stm" }

[[bin]]
name = "downlinks_server"
path = "src/downlinks/server.rs"

[[bin]]
name = "downlinks_client"
path = "src/downlinks/client.rs"

[[bin]]
name = "command_lanes_server"
path = "src/command_lanes/server.rs"

[[bin]]
name = "command_lanes_client"
path = "src/command_lanes/client.rs"

[[bin]]
name = "value_lanes_server"
path = "src/value_lanes/server.rs"

[[bin]]
name = "value_lanes_client"
path = "src/value_lanes/client.rs"

[[bin]]
name = "map_lanes_server"
path = "src/map_lanes/server.rs"

[[bin]]
name = "map_lanes_client"
path = "src/map_lanes/client.rs"

[[bin]]
name = "timers_server"
path = "src/timers/server.rs"

[[bin]]
name = "timers_client"
path = "src/timers/client.rs"

[[bin]]
name = "join_value_lanes_client"
path = "src/join_value_lanes/client.rs"

[[bin]]
name = "join_map_lanes_client"
path = "src/join_map_lanes/client.rs"