[package]
name = "form"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

common = { path = "../common" }
form_derive = { path = "form_derive" }
deserialize = { path = "deserialize" }
serialize = { path = "serialize" }

[dev-dependencies]
hamcrest2 = "0.3"
trybuild = "1.0"