[package]
name = "macro_utilities"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["printing", "visit", "visit-mut", "parsing", "extra-traits"] }
quote = { workspace = true }
convert_case = { workspace = true }
thiserror = { workspace = true }
frunk = { workspace = true }