[package]
name = "ratchet"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
default = []
deflate = ["ratchet_deflate"]

[dependencies]
ratchet_core = { path = "ratchet_core" }
ratchet_ext = { path = "ratchet_ext" }
ratchet_deflate = { path = "ratchet_deflate", optional = true }

[dev-dependencies]
tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
bytes = "1.0"
