[package]
name = "stm"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-util = "0.3.4"
parking_lot = "0.11.0"
pin-project = "0.4.20"
tokio = { version = "0.3.3", features = ["sync"] }
slab = "0.4.2"

utilities = { path = "../utilities" }

[dev-dependencies]
tokio = { version = "0.3.3", features = ["rt-multi-thread", "macros", "time"] }

