[package]
name = "stm"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-util = "0.3.4"
parking_lot = "0.11.0"
pin-project = "1.0.5"
pin-utils = "0.1.0"
tokio = { version = "1.1.1", features = ["sync"] }
slab = "0.4.2"

swim_utilities = { path = "../swim_utilities", features = ["sync", "algebra"] }

[dev-dependencies]
tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros", "time"] }

