[package]
name = "swim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim_api = { path = "../api/swim_api" }
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_recon = { path = "../api/formats/swim_recon" }
