[package]
name = "swim_client"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
default = ["websocket"]
websocket = ["tokio-tungstenite", "http", "tokio-native-tls", "swim_common/tls"]
debug = ["log_verbose"]
log_verbose = []
test-server = ["test_server"]

[dependencies.test_server]
path = "test_server"
features = ["enabled"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.12.0"
git = "https://github.com/swimos/tokio-tungstenite/"
branch = "tokio-0.3-deflate"
features = ["tls", "deflate"]
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "0.2"
optional = true

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.16"

[dependencies.swim_common]
path = "../swim_common"
default-features = false

[dependencies]
utilities = { path = "../utilities" }
swim_runtime = { path = "../swim_runtime" }

pin-utils = "0.1.0"
pin-project = "0.4.20"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
im = "15.0.0"
url = "2.1.1"
rand = "0.7.3"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
tokio = { version = "0.3.3", features = ["sync", "stream", "rt", "macros", "time"] }
num-bigint = "0.3"

[dev-dependencies]
tokio = { version = "0.3.3", features = ["rt-multi-thread"] }


[[example]]
name = "command_lane"

[[example]]
name = "downlinks"

[[example]]
name = "join_map_lanes"

[[example]]
name = "join_value_lanes"

[[example]]
name = "map_lanes"

[[example]]
name = "timer"

[[example]]
name = "value_lanes"