[package]
name = "swim_client"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
default = ["websocket"]
websocket = ["tokio-tungstenite", "http", "tokio-native-tls", "swim_common/tls", "swim_common/tungstenite", "test_server"]
debug = ["log_verbose"]
log_verbose = []

[dependencies.test_server]
path = "test_server"
optional = true

[dependencies.tokio-tungstenite]
version = "0.13.0"
git = "https://github.com/swimos/tokio-tungstenite/"
branch = "deflate-v13"
features = ["tls", "deflate"]
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.16"

[dependencies.swim_common]
path = "../swim_common"
default-features = false

[dependencies]
utilities = { path = "../utilities" }
swim_runtime = { path = "../swim_runtime" }
swim_warp = { path = "../swim_warp" }

pin-utils = "0.1.0"
pin-project = "0.4.20"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
im = "15.0.0"
url = "2.1.1"
rand = "0.7.3"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
tokio = { version = "1.1.1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1.2"
num-bigint = "0.3"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["rt-multi-thread"] }
