[package]
name = "swim_client"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
debug = ["log_verbose"]
trust-dns = ["trust-dns-resolver"]
log_verbose = []

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.16"

[dependencies]
swim_utilities = { path = "../swim_utilities", features = ["errors", "sync", "lrucache"] }
swim_async_runtime = { path = "../runtime/swim_async_runtime" }
swim_warp = { path = "../swim_warp" }
swim_runtime = { path = "../runtime/swim_runtime" }
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_recon = { path = "../api/formats/swim_recon" }
swim_schema = { path = "../api/swim_schema" }
ratchet = {  path = "../ratchet", features = ["deflate", "split"] }
http = "0.2"
tokio-native-tls = "0.3"
pin-utils = "0.1.0"
pin-project = "1.0.5"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
im = "15.0.0"
url = "2.1.1"
rand = "0.7.3"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
tokio = { version = "1.1.1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1.2"
trust-dns-resolver = { version = "0.20", optional = true, features = ["tokio-runtime"] }
slab = "0.4.4"
thiserror = "1.0.29"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["rt-multi-thread"] }
test_server = { path = "test_server" }
bytes = "1.0"
ratchet_fixture = { path = "../ratchet/ratchet_fixture" }