[package]
name = "swim_common"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
tls = ["tokio-native-tls", "tokio-tungstenite/tls"]

[dependencies]
swim_runtime = { path = "../swim_runtime" }
pin-utils = "0.1.0"
byteorder = "1.4"
bytes = "^1.0.0"
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
http = "0.2.3"
pin-project = "1.0.5"
tokio = { version = "1.1.1", features = ["sync", "rt"] }
tokio-stream = "0.1.2"
regex = "1.3.6"
ryu = "1.0"
tokio-util = { version = "0.6.3", features = ["codec"] }
swim_utilities = { path = "../swim_utilities", features = ["errors", "sync", "iteratee", "text"] }
swim_model = {path = "../api/swim_model" }
url = "2.1.1"
tracing = { version = "0.1.13"}
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
num-traits = "0.2.12"
base64 = "0.13.0"
form_derive = { path = "form_derive" }
im = "15.0.0"
chrono = "0.4"
tokio-tungstenite = { version = "0.13.0", git = "https://github.com/swimos/tokio-tungstenite/", branch = "deflate-v13", features = ["deflate"] }
nom = "7.0"
nom_locate = "4.0"
rmp = "0.8"

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dev-dependencies]
tokio = { version = "1.1.1", features = ["fs", "macros", "test-util"] }
rand = "0.7"
num-bigint = { version = "0.3", features = ["rand"] }
trybuild = "1.0.37"
parking_lot = "0.11.0"
