[package]
name = "swim_downlink"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
futures = "0.3.23"
swim_utilities = { path = "../swim_utilities", features = ["io", "trigger"] }
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_recon = { path = "../api/formats/swim_recon" }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
swim_api = { path = "../api/swim_api" }
tokio-stream = { workspace = true }
tracing = "0.1.16"
tracing-futures = "0.2.4"

[dev-dependencies]
swim_recon = { path = "../api/formats/swim_recon", features = ["async_parser"] }
tokio = { workspace = true, features = ["rt", "macros"]}
