[package]
name = "swim_downlink"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
futures = { workspace = true }
swim_utilities = { path = "../swim_utilities", features = ["io", "trigger"] }
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_recon = { path = "../api/formats/swim_recon" }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
swim_api = { path = "../api/swim_api" }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
either = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
swim_recon = { path = "../api/formats/swim_recon", features = ["async_parser"] }
tokio = { workspace = true, features = ["rt", "macros"]}
