[package]
name = "swim_runtime"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-util = "0.3.4"
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4.8"
tokio = { version = "0.2.21", features = ["sync", "rt-core"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.2.21", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-timer = "0.2.4"
wasm-bindgen-futures = "0.4.13"

[dev-dependencies]
hamcrest2 = "0.3"
tokio = { version = "0.2.21", features = [ "rt-threaded", "macros"] }